Closed Bug 60749 Opened 24 years ago Closed 23 years ago

Table reflow problem

Categories

(Core :: Layout: Tables, defect, P3)

x86
Other
defect

Tracking

()

RESOLVED FIXED
mozilla0.9

People

(Reporter: asreddy_74, Assigned: karnaze)

References

Details

Attachments

(4 files)

Setting td width in table dynamically needs a table reflow. The testcase below 
shows the problem

<html>
	<head>
	<script>
		function test1() {
		var e1 = document.getElementById("myTd");
		e1.style.width = 300; 
		var e2 = document.getElementById("table");
		}
		function test2() {
		var e1 = document.getElementById("myTd");
		e1.style.width = 300; 
		var e2 = document.getElementById("table");
		e2.style.display = 'none';
		e2.style.display = '';
		}
	</script> 
	</head>
	<body >
	<table id="table" cellspacing=0 border=3>
	<tr><td>fieldLabel</td>	<td 
id="myTd">&nbsp;&nbsp;&nbsp;InspectionText</td></tr>
	</table>
	<input type="button" value="change width" onclick="test1()">
	<input type="button" value="change width with table reflow" 
onclick="test2()">
	</body>
	</html>
Attached file Above html file
Seen on CVS build today Dec 18th (Linux).
Yeah I am seeing this.
Platform: PC
OS: Windows 98
Mozilla Build: 2000121804 M18 Trunk Build
With the XHTML testcase, I see both buttons doing the same thing -- absolutely
nothing.  With the HTML 4.01 testcase, I can reproduce the original bug report.

This is linux build 2000-12-05-08
I see this too on Linux 2000121606. Marking confirmed and hoping it's not a
dup... :)
Status: UNCONFIRMED → NEW
Ever confirmed: true
Still occurring in latest trunk builds on linux. Nominating for mozilla0.9

karnaze/chrisd: perhaps this is an event handling problem?
Keywords: mozilla0.9
moving to m0.9.1
Target Milestone: --- → mozilla0.9.1
QA contact update
QA Contact: chrisd → amar
Status: NEW → ASSIGNED
Target Milestone: mozilla0.9.1 → mozilla0.9
Moving to m0.9
The patch is in. Please do not reopen this bug because the XHTML case does not 
work. That is a different problem and most likely not a table problem.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
*** Bug 75932 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: