bug 60749 - on a table cell frame style change reflow, reinitialize the table's strategy.